<resources>
    <string name="app_name">搭不搭</string>
    <string name="hint_phonenumber">请输入手机号</string>
    <string name="hint_captcha">请输入验证码</string>
    <string name="label_captcha">获取验证码</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <!--底部导航栏-->
    <string name="tab_menu_fittingroom">"试衣间"</string>
    <string name="tab_menu_clothes">"衣橱"</string>
    <string name="tab_menu_circle">"圈子"</string>
    <string name="tab_menu_mine">"我的"</string>

    <string name="title_name">"搭不搭"</string>
    <string name="label_save">保存搭配</string>
    <string name="label_main_share">分享好友</string>
    <string name="label_main_hint">添加自己的衣物，唤醒您的智能衣橱管家</string>
    <string name="btn_add_pic">相册批量添加</string>
    <string name="btn_take_pic">拍照添加</string>
    <string name="tab_decorator">配饰</string>
    <string name="tab_cloth">上装</string>
    <string name="tab_trousers">下装</string>
    <string name="tab_shoes">鞋袜</string>

    <!--dialo_share-->
    <string name="label_dialog_save_title">请先添加衣服</string>
    <string name="label_dialog_save_detail">您还未添加衣服</string>
    <string name="label_dialog_save_second_detail">快去衣橱里添加你心爱的衣物</string>
    <string name="label_dialog_save_third_detail">开启高效的电子衣物管理之旅吧</string>
    <string name="label_dialog_save_enter">添加衣服</string>

    <string name="label_dialog_share_title">将这套搭配分享给好友</string>
    <string name="label_dialog_share_detail">将搭配分享给好友</string>
    <string name="label_dialog_share_second_detail">好友可以给你的搭配点赞和留言</string>
    <string name="label_dialog_share_enter">选择好友</string>
    <string name="label_mine_name">用户昵称</string>
    <string name="lable_my_circle">我的圈子</string>
    <string name="label_personal_center">个人主页</string>
    <string name="lable_setting">设置</string>
    <string name="lable_normal_problem">常见问题</string>
    <string name="lable_feedback">建议反馈</string>
    <string name="lable_share_to_friend">分享给好友</string>
    <string name="btn_chage_avatar">更换头像</string>
    <string name="btn_cancel">取消</string>
    <string name="label_edit_figure_data">编辑身材数据</string>
    <string name="label_my_circle">我的圈子</string>
    <string name="title_activity_kou_tu">KouTuActivity</string>
    <string name="label_following">关注</string>
    <string name="label_default_zero">0</string>
    <string name="label_follower">粉丝</string>
    <string name="label_common">常用</string>
    <string name="label_common_question">常见问题</string>
    <string name="label_my_circle_published">我的发布</string>
    <string name="label_my_circle_like">我的喜欢</string>
    <string name="label_my_circle_fit_request">搭配请求</string>
    <string name="label_tab_all">全部</string>
    <string name="label_tab_following">关注</string>

    <string name="lable_fit_location">场景</string>
    <string name="lable_style">风格</string>
    <string name="lable_season">季节</string>
    <string name="title_change_background">更换背景</string>
    <string name="lable_restart_collocate">继续搭配</string>
    <string name="lable_collocate_detail">搭配详情</string>
    <string name="label_edit_profile">编辑资料</string>
    <string name="label_setting">设置</string>
    <string name="ic_save_collocation">保存搭配</string>
    <string name="lable_share_friend">分享好友</string>
    <string name="lable_add_lable">添加标签：</string>
    <string name="lable_custom_lable">自定义标签</string>
    <string name="lable_head">标题......</string>
    <string name="hind_thinking">想法......</string>
    <string name="title_publish_circle">发布圈子</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="title_activity_fade_modify">FadeModifyActivity</string>

    <!--待改-->
    <string name="txt_upload_success">更新成功</string>
    <string name="txt_warn_number_format">提交失败</string>
    <string name="txt_avatar_upload_failed">更改头像失败</string>
    <string name="txt_permission_tip_edit_avatar">申请更改头像</string>
    <string name="txt_tip_feedback">感谢您的吐槽和建议，我们每分每秒都在改进</string>
</resources>
