<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_marginBottom="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.89"
        >
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/light_gray"/>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:id="@+id/img_cloth_fitting_room"
                tools:ignore="NestedWeights"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"/>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/light_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp">

        <TextView
            android:id="@+id/txt_lable_fit_location"
            style="@style/ClothesTheme"
            android:text="@string/lable_fit_location"/>

        <TextView
            android:id="@+id/txt_lable_style"
            style="@style/ClothesTheme"
            android:text="@string/lable_style"
            />

        <TextView
            android:id="@+id/txt_lable_season"
            style="@style/ClothesTheme"
            android:text="@string/lable_season"/>
    </LinearLayout>

</LinearLayout>


